--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -12,6 +12,7 @@ jobs:
 
       - name: setup dependencies
         run: |
+          sudo apt-get install libcurl4-openssl-dev
           R -e 'install.packages("renv")'
           R -e 'renv::restore()'
 
